[gd_scene load_steps=4 format=3 uid="uid://60knm8iae4n7"]

[ext_resource type="Theme" uid="uid://cqlcjx0e4f7ox" path="res://new_theme.tres" id="1_i6ycl"]
[ext_resource type="Script" uid="uid://bxh5wr0eaokfx" path="res://shop_interface.gd" id="1_yhqus"]
[ext_resource type="Texture2D" uid="uid://d07b0qqaeyj8s" path="res://assets/selector.png" id="2_yhqus"]

[node name="ShopInterface" type="Control" groups=["ShopInterface"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhqus")

[node name="Shop" type="Panel" parent="."]
visible = false
offset_left = 2.0
offset_top = 2.0
offset_right = 118.0
offset_bottom = 126.0
theme = ExtResource("1_i6ycl")

[node name="Title" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 29.0
offset_bottom = 14.0
text = "Shop"

[node name="RodLabel" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 15.0
offset_top = 20.0
offset_right = 105.0
offset_bottom = 49.0
text = "Buy Rod Upgrade
    Cost: $
    Have:"

[node name="RodCost" type="Label" parent="Shop/RodLabel"]
layout_mode = 0
offset_left = 66.0
offset_top = 10.0
offset_right = 106.0
offset_bottom = 19.0
text = "500"

[node name="RodHave" type="Label" parent="Shop/RodLabel"]
layout_mode = 0
offset_left = 60.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 29.0
text = "0"

[node name="BaitLabel" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 15.0
offset_top = 50.0
offset_right = 111.0
offset_bottom = 79.0
text = "Buy Bait Upgrade
    Cost: $
    Have: "

[node name="BaitCost" type="Label" parent="Shop/BaitLabel"]
offset_left = 66.0
offset_top = 10.0
offset_right = 106.0
offset_bottom = 19.0
text = "500"

[node name="BaitHave" type="Label" parent="Shop/BaitLabel"]
offset_left = 60.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 29.0
text = "0"

[node name="LuckLabel" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 15.0
offset_top = 80.0
offset_right = 111.0
offset_bottom = 109.0
text = "Buy Luck Upgrade
    Cost: $
    Have: "

[node name="LuckCost" type="Label" parent="Shop/LuckLabel"]
offset_left = 66.0
offset_top = 10.0
offset_right = 106.0
offset_bottom = 19.0
text = "500"

[node name="LuckHave" type="Label" parent="Shop/LuckLabel"]
offset_left = 60.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 29.0
text = "0"

[node name="Exit" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 15.0
offset_top = 110.0
offset_right = 105.0
offset_bottom = 139.0
text = "Exit"

[node name="MoneyLabel" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 39.0
offset_top = 5.0
offset_right = 87.0
offset_bottom = 14.0
text = "Money: $"

[node name="MoneyCounter" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 87.0
offset_top = 6.0
offset_right = 129.0
offset_bottom = 15.0
text = "9999"

[node name="Selector" type="Sprite2D" parent="Shop"]
position = Vector2(7, 20)
texture = ExtResource("2_yhqus")
centered = false
